--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,74 @@
-:root {
-  --dark-charcoal: #26242C;
-  --deep-purple: #0E0C15;
-  --midnight: #15131D;
-  --shadow-purple: #252134;
-  --slate-gray: #3F3A52;
-  --dusty-purple: #757185;
-  --lavender-gray: #ADA8C3;
-  --light-lavender: #CAC6DD;
-  --white: #FFFFFF;
-  --deep-night: #0E0C15;
-  --pink-blossom: #FF98E2;
-  --periwinkle: #858DFF;
-  --mint-green: #7ADB78;
-  --coral: #FF776F;
-  --sunshine-yellow: #FFC876;
-  --violet: #AC6AFF;
-}
-
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-family: Sora, system-ui, sans-serif;
+  }
+
+  h1 {
+    font-size: 60px;
+    line-height: 72px;
+    font-weight: 600;
+  }
+
+  h2 {
+    font-size: 48px;
+    font-weight: 400;
+    line-height: 60px;
+  }
+
+  h3 {
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 60px;
+  }
+
+  h4 {
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 48px;
+  }
+
+  h5 {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 36px;
+  }
+
+  h6 {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 32px;
+  }
+}
+
+@layer utilities {
+  .body-1 {
+    @apply text-body-1 font-sora;
+  }
+
+  .body-2 {
+    @apply text-body-2 font-sora;
+  }
+
+  .caption {
+    @apply text-caption font-sora;
+  }
+
+  .tag-line {
+    @apply uppercase text-tagLine font-spaceGrotesk;
+  }
+
+  .quote {
+    @apply text-quote font-sourceCodePro;
+  }
+}
+
+@layer components {
+  .btn {
+    @apply text-xs font-bold leading-5 uppercase font-sourceCodePro;
+    letter-spacing: 0.42px;
+  }
+}
