--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,11 +1,26 @@
-<header class="">
-  <img src="/img/logo/logo-brainwave.svg" alt="logo" width="225" height="48" />
-  <app-button>
-    <div class="border-t-b-gradient">
-      <div class="icon">
-        <span></span>
-        <span></span>
-      </div>
+<header>
+  <div class="wrapper">
+    <img ngSrc="/img/logo/logo-brainwave.svg" alt="logo" width="225" height="48" class="relative z-10"/>
+    <div class="menu" [ngClass]="menuClass">
+      <nav class="flex flex-col gap-6">
+        <ul>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">How to use</a></li>
+          <li><a href="#">Roadmap</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">New account</a></li>
+          <li><app-button variant="gradient">Sign in</app-button>
+          </li>
+        </ul>
+      </nav>
     </div>
-  </app-button>
+    <app-button variant="gradient" (click)="toggle()">
+      <span class="icon">
+        <span></span>
+        <span></span>
+      </span>
+    </app-button>
+  </div>
 </header>
