fix mobile menu

--- a/src/app/components/ui/button/button.component.html
+++ b/src/app/components/ui/button/button.component.html
@@ -1,17 +1,41 @@
-<button [ngClass]="buttonContainerClass" (click)="handleClick($event)">
-  <img
-    ngSrc="/img/btn/left-gradient.svg"
-    alt="left gradient"
-    width="21"
-    height="44"
-  />
+@if (href !== "") {
+<a
+  [ngClass]="buttonContainerClass"
+  class="hover:text-violet"
+  [routerLink]="href"
+>
+  @if (variant === "gradient") {
+  <span class="relative z-50"><svg-gradient-left /></span>
+  } @if (variant === "white") {
+  <svg-gradient-left />
+  }
   <span [ngClass]="buttonClass">
-    <ng-content/>
+    <ng-content />
   </span>
-  <img
-    ngSrc="/img/btn/right-gradient.svg"
-    alt="right gradient"
-    width="21"
-    height="44"
-  />
+  @if (variant === "gradient") {
+  <svg-gradient-right />
+  } @if (variant === "white") {
+  <svg-white-right />
+  }
+</a>
+} @else {
+<button
+  [ngClass]="buttonContainerClass"
+  class="hover:text-violet"
+  (click)="handleClick($event)"
+>
+  @if (variant === "gradient") {
+  <span class="relative z-50"><svg-gradient-left /></span>
+  } @if (variant === "white") {
+  <svg-gradient-left />
+  }
+  <span [ngClass]="buttonClass">
+    <ng-content />
+  </span>
+  @if (variant === "gradient") {
+  <svg-gradient-right />
+  } @if (variant === "white") {
+  <svg-white-right />
+  }
 </button>
+}
