--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -24,15 +24,15 @@
         </div>
       </nav>
     </div>
-    <div class="flex lg:hidden">
+    <div class="btn-menu">
       <app-button
         variant="gradient"
         classButtonContainer="flex"
         (click)="toggle()"
       >
         <span class="icon">
-          <span></span>
-          <span></span>
+          <span class="first"></span>
+          <span class="second"></span>
         </span>
       </app-button>
     </div>
