--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -7,11 +7,11 @@ header {
     @apply relative z-40 flex items-center justify-between w-full;
 
     .navigation {
-      @apply fixed w-0 lg:w-full h-screen lg:h-auto delay-100 overflow-hidden opacity-0 lg:opacity-100 flex flex-col justify-center gap-12 left-0 bottom-0 lg:flex-row lg:items-center lg:relative lg:transform-none lg:left-0 lg:justify-between lg:flex-[0_0_70%] xl:flex-[0_0_65%];
+      @apply fixed w-0 lg:w-full h-screen lg:h-auto delay-100 overflow-hidden opacity-0 lg:opacity-100 flex flex-col justify-center gap-12 left-0 top-0 bottom-0 lg:flex-row lg:items-center lg:static lg:transform-none lg:left-0 lg:justify-between lg:flex-[0_0_70%] xl:flex-[0_0_65%];
       transition: all 600ms cubic-bezier(0.62, 0.04, 0.3, 1.56);
 
       nav {
-        @apply flex flex-col items-start lg:items-center justify-start gap-12 lg:gap-24 lg:flex-row lg:justify-between lg:w-full;
+        @apply absolute left-1/2 top-1/2 flex flex-col -translate-y-1/2 -translate-x-1/2 lg:static lg:transform-none lg:items-center justify-start gap-12 lg:gap-24 lg:flex-row lg:justify-between lg:w-full;
 
         ul,
         .auth {
@@ -30,28 +30,56 @@ header {
       }
 
       &.active {
-        @apply opacity-100  delay-100 lg:delay-0 w-full h-screen bg-midnight items-center;
+        @apply opacity-100  delay-100 lg:delay-0 w-full h-screen bg-dark-purple items-center;
         animation: slideIn 0.6s cubic-bezier(0.62, 0.04, 0.3, 1.56);
         animation-fill-mode: forwards;
+
+        + .btn-menu {
+          .icon {
+            span {
+              &:first-child {
+                transform: rotate(40deg);
+              }
+
+              &:last-child {
+                transform: rotate(-40deg);
+              }
+            }
+          }
+        }
       }
 
       &.inactive {
-        @apply opacity-0 w-0 lg:opacity-100 delay-100 lg:delay-0;
+        @apply opacity-0 w-0 lg:opacity-100 delay-150 lg:delay-0;
         animation: slideOut 0.6s cubic-bezier(0.62, 0.04, 0.3, 1.56) forwards;
+
+        * {
+          @apply opacity-0 lg:opacity-100;
+        }
       }
     }
-  }
-}
 
-.icon {
-  span {
-    @apply block w-5 h-0.5 bg-white;
-    &:first-child {
-      @apply -translate-y-1;
-    }
+    .btn-menu {
+      @apply lg:hidden;
+      .icon {
+        @apply relative w-5;
 
-    &:last-child {
-      @apply translate-y-1;
+        span {
+          @apply absolute left-0 w-5 h-0.5 bg-white;
+          transition: all 400ms cubic-bezier(0.84, 0.06, 0.52, 1.8);
+          &:first-child {
+            @apply -translate-y-1 -translate-x-1;
+            transform: translateY(-4px);
+            animation-delay: 100ms;
+          }
+
+          &:last-child {
+            @apply translate-y-1;
+            transform: translateY(4px);
+            animation-delay: 250ms;
+          }
+        }
+      }
     }
   }
 }
