--- a/src/styles.css
+++ b/src/styles.css
@@ -7,14 +7,31 @@
     font-family: Sora, system-ui, sans-serif;
   }
 
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  ::-webkit-scrollbar-track {
+    @apply bg-white;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply bg-violet;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-periwinkle;
+  }
+
   body {
     @apply text-white bg-deep-black overflow-x-hidden;
   }
 
   h1 {
-    font-size: 60px;
-    line-height: 72px;
-    font-weight: 600;
+    @apply text-[2.5rem] leading-[52px] font-semibold ;
+    @apply md:text-[44px] md:leading-[60px];
+    @apply lg:text-[52px] lg:leading-[65px];
+    @apply xl:text-6xl xl:leading-[72px];
   }
 
   h2 {
@@ -50,7 +67,7 @@
 
 @layer utilities {
   .body-1 {
-    @apply text-body-1 font-sora;
+    @apply text-sm text-light-lavender leading-6 md:text-base md:leading-[26px] lg:text-xl lg:leading-8 font-sora;
   }
 
   .body-2 {
@@ -70,7 +87,7 @@
   }
 
   .wrapper {
-    @apply max-w-[1920px] mx-auto px-1;
+    @apply max-w-[1920px] mx-auto px-5;
   }
 }
 
@@ -89,5 +106,9 @@
     &::after {
       @apply content-[""] absolute bottom-0 left-0 h-0.5 w-full bg-gradient-bottom;
     }
+  }
+
+  .btn-white {
+    @apply relative flex items-center justify-center h-11 bg-white hover:text-violet;
   }
 }
