--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<main id="hero" class="relative top-48 flex flex-col text-center">
+<main id="hero" class="relative top-48 flex flex-col text-center pb-11">
   <div class="wrapper">
     <div class="flex flex-col gap-6">
       <h1>
@@ -23,6 +23,22 @@
         <app-button variant="white" classButtonContainer="flex items-center">
           <span>get started</span>
         </app-button>
+      </div>
+      <div class="hero-container">
+        <div class="hero-border">
+          <span></span>
+          <div class="img-container">
+            <img
+              ngSrc="img/hero/hero.png"
+              width="1664"
+              height="2432"
+              alt="hero"
+              class="rounded-bl-xl rounded-br-xl object-cover scale-[1.7] translate-y-[8%]"
+            />
+          </div>
+        </div>
+        <div class="shape first"></div>
+        <div class="shape second"></div>
       </div>
     </div>
   </div>
