--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
-<main id="hero" class="relative top-48 flex flex-col text-center pb-11">
+<main id="hero" class="relative flex flex-col text-center top-48 pb-11">
   <div class="wrapper">
-    <div class="flex flex-col gap-6">
+    <div class="relative z-40 flex flex-col gap-8">
       <h1>
         Explore the Possibilities <br />
         of AI Chatting with
@@ -11,7 +11,7 @@
             alt="curve"
             width="640"
             height="29"
-            class="w-full top-full h-auto absolute bottom-0"
+            class="absolute bottom-0 w-full h-auto top-full"
           />
         </span>
       </h1>
@@ -40,6 +40,11 @@
         <div class="shape first"></div>
         <div class="shape second"></div>
       </div>
+    </div>
+    <div class="circle-container">
+      <span class="first"></span>
+      <span class="second"></span>
+      <span class="third"></span>
     </div>
   </div>
 </main>
