--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<main id="hero" class="relative flex flex-col text-center top-48 pb-11">
+<main id="hero" class="relative flex flex-col overflow-x-hidden text-center top-48 pb-11">
   <div class="wrapper">
     <div class="relative z-40 flex flex-col gap-8">
       <h1>
@@ -41,10 +41,10 @@
         <div class="shape second"></div>
       </div>
     </div>
-    <div class="circle-container">
-      <span class="first"></span>
-      <span class="second"></span>
-      <span class="third"></span>
-    </div>
   </div>
 </main>
+<div class="circle-container">
+  <span class="first"></span>
+  <span class="second"></span>
+  <span class="third"></span>
+</div>
