--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<main class="relative overflow-x-hidden ">
+<main class="relative overflow-hidden ">
   <div id="hero" class="relative flex flex-col overflow-x-hidden text-center top-48 pb-11">
     <div class="wrapper">
       <div class="relative z-40 flex flex-col gap-8">
