--- a/src/app/components/ui/button/button.component.html
+++ b/src/app/components/ui/button/button.component.html
@@ -6,7 +6,7 @@
   @if (variant === "gradient") {
   <svg-gradient-left />
   } @if (variant === "white") {
-  <svg-white-left />
+  <svg-white-left></svg-white-left>
   }
   <span [ngClass]="buttonClass">
     <ng-content></ng-content>
