--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <main class="relative overflow-hidden ">
-  <div id="hero" class="relative flex flex-col overflow-x-hidden text-center top-48 pb-11">
+  <div id="hero" class="relative flex flex-col overflow-x-hidden text-center top-40 pb-11">
     <div class="wrapper">
       <div class="relative z-40 flex flex-col gap-8">
         <h1>
@@ -30,7 +30,7 @@
             <span></span>
             <div class="img-container">
               <img
-                ngSrc="img/hero/hero.png"
+                ngSrc="/img/hero/hero.png"
                 width="1664"
                 height="2432"
                 alt="hero"
@@ -48,5 +48,7 @@
     <span class="first"></span>
     <span class="second"></span>
     <span class="third"></span>
+    <span class="fourth"></span>
+    <span class="fifth"></span>
   </div>
 </main>
