--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
-<main class="relative overflow-hidden ">
-  <div id="hero" class="relative flex flex-col overflow-x-hidden text-center top-40 pb-11">
+<main class="relative overflow-hidden">
+  <div id="hero" class="relative flex flex-col overflow-x-hidden text-center top-40">
     <div class="wrapper">
       <div class="relative z-40 flex flex-col gap-8">
         <h1>
@@ -43,6 +43,16 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="absolute top-1/2 left-1/2 w-[140%] -translate-x-1/2">
+    <img ngSrc="/img/gradient-1.png" width="1417" height="1418" alt="gradient" class="absolute left-1/2 -translate-x-1/2"/>
+    <img
+      ngSrc="/img/hero/hero.png"
+      width="1664"
+      height="2432"
+      alt="hero"
+      class="opacity-[0.03] object-contain w-full h-auto"
+    />
   </div>
   <div class="circle-container">
     <span class="first"></span>
