--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -45,7 +45,7 @@
     </div>
   </div>
   <div class="absolute top-1/2 left-1/2 w-[140%] -translate-x-1/2">
-    <img ngSrc="/img/gradient-1.png" width="1417" height="1418" alt="gradient" class="absolute left-1/2 -translate-x-1/2"/>
+    <img ngSrc="/img/gradient-1.png" width="1417" height="1418" alt="gradient" class="absolute blur-[128px] left-1/2 -translate-x-1/2"/>
     <img
       ngSrc="/img/hero/hero.png"
       width="1664"
