--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -1,1 +1,64 @@
-<p>hero works!</p>
+<main class="relative overflow-hidden">
+  <div id="hero" class="relative flex flex-col overflow-x-hidden text-center mt-36">
+    <div class="wrapper">
+      <div class="relative z-40 flex flex-col gap-8">
+        <h1>
+          Explore the Possibilities <br />
+          of AI Chatting with
+          <span class="relative inline-block">
+            Brainwave
+            <img
+              ngSrc="/img/hero/curve.png"
+              alt="curve"
+              width="640"
+              height="29"
+              class="absolute bottom-0 w-full h-auto top-full"
+            />
+          </span>
+        </h1>
+        <p class="body-1">
+          Unleash the power of AI within Brainwave. Upgrade your productivity with
+          Brainwave, the open AI chat app.
+        </p>
+        <div class="flex items-center justify-center">
+          <app-button variant="white" classButtonContainer="flex items-center">
+            <span>get started</span>
+          </app-button>
+        </div>
+        <div class="hero-container">
+          <div class="hero-border">
+            <span></span>
+            <div class="img-container">
+              <img
+                ngSrc="/img/hero/hero.png"
+                width="1664"
+                height="2432"
+                alt="hero"
+                class="rounded-bl-xl rounded-br-xl object-cover scale-[1.7] translate-y-[8%]"
+              />
+            </div>
+          </div>
+          <div class="shape first"></div>
+          <div class="shape second"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="absolute top-1/2 left-1/2 w-[140%] -translate-x-1/2">
+    <img ngSrc="/img/gradient-1.png" width="1417" height="1418" alt="gradient" class="absolute opacity-5 left-1/2 -translate-x-1/2"/>
+    <img
+      ngSrc="/img/hero/hero.png"
+      width="1664"
+      height="2432"
+      alt="hero"
+      class="opacity-[0.03] object-contain w-full h-auto"
+    />
+  </div>
+  <div class="circle-container">
+    <span class="first"></span>
+    <span class="second"></span>
+    <span class="third"></span>
+    <span class="fourth"></span>
+    <span class="fifth"></span>
+  </div>
+</main>
