--- a/src/styles.css
+++ b/src/styles.css
@@ -35,9 +35,10 @@
   }
 
   h2 {
-    font-size: 48px;
-    font-weight: 400;
-    line-height: 60px;
+    @apply text-[28px] leading-[40px] font-semibold ;
+    @apply md:text-[32px] md:leading-[40px];
+    @apply lg:text-[40px] lg:leading-[56px];
+    @apply xl:text-5xl xl:leading-[60px];
   }
 
   h3 {
