--- a/src/app/sections/home/carousel/carousel.component.html
+++ b/src/app/sections/home/carousel/carousel.component.html
@@ -1,5 +1,5 @@
 <section id="carousel" class="pt-16">
   <div class="wrapper">
-    <h2>Chat Smarter, Not Harder with Brainwave</h2>
+    <h2 class="w-[70%]">Chat Smarter, Not Harder with Brainwave</h2>
   </div>
 </section>
