--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -1,5 +1,5 @@
 <main class="relative overflow-hidden">
-  <div id="hero" class="relative flex flex-col overflow-x-hidden text-center mt-36">
+  <div id="hero" class="relative flex flex-col text-center mt-[12rem]">
     <div class="wrapper">
       <div class="relative z-40 flex flex-col gap-8">
         <h1>
