--- a/src/app/sections/home/hero/hero.component.css
+++ b/src/app/sections/home/hero/hero.component.css
@@ -12,7 +12,7 @@
     );
     span {
       @apply w-full h-6 rounded-t-xl;
-      background: #1b1b2e;
+      background: rgb(67,67,92);
     }
 
     .img-container {
