--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -1,4 +1,4 @@
-<main class="relative overflow-hidden">
+<main class="relative overflow-hidden pb-8">
   <div id="hero" class="relative flex flex-col text-center mt-[12rem]">
     <div class="wrapper">
       <div class="relative z-40 flex flex-col gap-8">
@@ -51,7 +51,7 @@
       width="1664"
       height="2432"
       alt="hero"
-      class="opacity-[0.03] object-contain w-full h-auto"
+      class="opacity-[0.03] scale-[1.1] object-center"
     />
   </div>
   <div class="circle-container">
