--- a/src/app/sections/home/carousel/carousel.component.html
+++ b/src/app/sections/home/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<section id="carousel" class="pt-7">
+<section id="carousel" class="relative pt-7">
   <div class="wrapper">
     <h2 class="w-[70%]">Chat Smarter, Not Harder with Brainwave</h2>
   </div>
