--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -32,7 +32,7 @@
     </div>
     <div class="mt-16">
       <div class="hero-border">
-        <span class="block h-6 w-full bg-dark-purple rounded-t-xl"></span>
+        <span class="block w-full h-6 bg-dark-purple rounded-t-xl"></span>
         <div
           class="w-full relative aspect-[33/40] overflow-hidden rounded-b-xl"
         >
@@ -68,13 +68,13 @@
       ></span>
     </div>
   </div>
-  <div class="absolute top-[79%] -translate-y-1/2 -z-20 left-0 right-0 w-full">
+  <div class="absolute left-0 right-0 w-full -translate-y-[37%] top-3/4 -z-20">
     <img
       ngSrc="/img/hero/hero.png"
       alt="Hero"
       width="1664"
       height="2432"
-      class="w-full object-cover scale-[1.6] opacity-[0.03]"
+      class="w-full object-cover scale-[1.4] opacity-[0.03]"
     />
   </div>
 </section>
