--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -1,8 +1,8 @@
 <section
   id="hero"
-  class="relative mt-[8.25rem] md:mt-[9.75rem] lg:mt-[12.25rem] overflow-hidden"
+  class="relative overflow-hidden"
 >
-  <div class="wrapper">
+  <div class="wrapper pt-[9rem] md:pt-[9.75rem] lg:pt-[12.25rem]">
     <div class="relative z-10 text-center">
       <h1>
         Explore the Possibilities <br />
@@ -76,5 +76,11 @@
       height="2432"
       class="w-full object-cover scale-[1.4] opacity-[0.03]"
     />
+  </div>
+  <div class="pattern">
+    <div class="ellipse-1"></div>
+    <div class="ellipse-2"></div>
+    <div class="ellipse-3"></div>
+    <div class="ellipse-4"></div>
   </div>
 </section>
