--- a/src/app/sections/home/hero/hero.component.html
+++ b/src/app/sections/home/hero/hero.component.html
@@ -77,6 +77,7 @@
         ngSrc="/img/hero/hero.png"
         width="1664"
       />
+      <img alt="gradient" ngSrc="/img/gradient-1.png" width="1417" height="1418" class="bg-gradient"/>
     </div>
   </div>
 </section>
